--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,10 @@
 {
-    "token": "Put your token here",
+    "token": "NjU1NzY4Mjc2OTk1MDE0Njc3.XfY65w.aZ6b0Up6sbsIxKzf6MY-fXUhFjA",
+    "server_id": 655767868348301332,
+    "cmd_channels":[
+        "bot-commands"
+    ],
     "welcome": [
-        "hi", "Hi",
-        "hello", "Hello",
-        "How are you"
+        "hi", "hello", "hey"
     ]
 }
